<?xml version="1.0"?>
<package format="3">
  <name>netft_rdt_driver</name>
  <version>0.0.0</version>
  <description>
     Driver for NetFT sensor that uses Raw Data Transfer (RDT) protocol.
  </description>

  <maintainer email="guillaume@todo.todo">Derek King</maintainer>

  <license>BSD</license>


  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
